--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,102 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #f1f9f9;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+header {
+  background-color: #9737c2;
+  height: 100px;
+  padding: 10px;
+
+}
+h2{
+  color: #434f54;
+    font-family: Typonine Sans Light,Lucida Grande,Lucida,Verdana,sans-serif;
+    font-size: 30px;
+    font-weight: 400;
+    letter-spacing: 2.5px;
+    line-height: 1.3;
+    margin-bottom: 25px;
+    text-align: center;
+    text-transform: uppercase;
+    padding: 35px
+}
+
+/*class*/
+
+.container{
+  width: 960px;
+  margin: auto;
+  
+}
+.login-container{
+  display: inline-flex;
+  flex-wrap: unset;
+}
+
+.login_newUser {
+  flex: 0 0 50%;
+  padding: 10px;
+}
+.spaceHead {
+  margin-top: 60px;
+}
+
+.inputLogin{
+    background-color: #fff;
+    border: 1px solid #dae3e3;
+    border-radius: 0;
+    color: #434f54;
+    font-family: Typonine Sans Regular,Lucida Grande,Lucida,Verdana,sans-serif;
+    font-size: 16px;
+    letter-spacing: .7px;
+    line-height: normal;
+    margin-bottom: 12px;
+    padding: 15px 14px;
+    transition: background-color .2s;
+}
+.btnLogin{
+  background-color: #9737c2;
+    border: 1px solid #9737c2;
+    border-radius: 2px 2px 0 0;
+    box-shadow: 0 4px #cb77f0;
+    color: #fff;
+    cursor: pointer;
+    font-family: Typonine Sans Regular,Lucida Grande,Lucida,Verdana,sans-serif;
+    font-size: 14px;
+    letter-spacing: 1.28px;
+    line-height: normal;
+    outline: none;
+    padding: 9px 18px;
+    text-align: center;
+    text-transform: uppercase;
+    transition: box-shadow .1s ease-out,transform .1s ease-out;
+    -webkit-appearance: none;
+    
+}
+
+.divSpaceLogin{
+  padding: 10px;
+  border-right: 1px solid #dae3e3
+}
+
+.lineRight{
+  border-right: 1px solid #dae3e3
+}
+.new-account-img {
+  -ms-flex-align: center;
+  align-items: center;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-positive: 1;
+  flex-grow: 1;
+  -ms-flex-pack: center;
+  justify-content: center;
+  width: 100%;
 }
